--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta name="viewport" content="width=1200" />
     <title>FrontEnd Developer</title>
     <link
       rel="stylesheet"
@@ -81,7 +81,7 @@
               width="600"
               height="450"
               frameborder="0"
-              style="border: 0;"
+              style="border: 0"
               allowfullscreen=""
               aria-hidden="false"
               tabindex="0"
